--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
-	<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+<div class="container mx-auto">
+	<div class="row row-cols-1 row-cols-md-2 g-3 m-0">
 		<div class="col">
 			<div class="card">
 				<img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/9d0ceff5ed470b504331b8d897ea8518b8f163cd/2023web-camp/tool1.png" class="card-img-top" alt="...">
