--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<title>切版任務作業一 - AI 工具王 - 產品優勢卡片設計</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="SCSS/all.css">
+	<link rel="stylesheet" href="SCSS/style.css">
 </head>
 <body>
 <div class="container mx-auto">
