--- a/index.html
+++ b/index.html
@@ -272,4 +272,160 @@ sum("9,5,7")
 // 30
 // -1
 // 35
+
+// JS 任務 Day7 - if 流程判斷 III
+// 題目一：有沒有打折
+// 某廠商大甩賣，折扣表如下：
+
+// 未滿 2000 無折扣
+// 2000~2999 9折
+// 3000~3999 8折
+// 高於 4000 7折
+function sale(n){
+	if(n<2000){
+		return `${n}`
+	}else if(2000 <= n && n < 3000){
+		return `${n*0.9}`
+	}else if(3000 <= n && n < 4000){
+		return `${n*0.8}`
+	}else{
+		return `${n*0.7}`
+	}
+}
+
+// input 輸入	 // output 輸出
+sale(5000)		// 3500
+sale(2500)		// 2250
+sale(3300)		// 2640
+sale(200)		// 200
+
+// 題目二：西元轉民國
+// 台灣/建立時間：1912 年 1 月 1 日
+function CEtoChinese(y){
+	if(y>1912){
+		return `"民國${y-1911}年"`
+	}else{
+		return "尚未建國"
+	}
+}
+
+// input 輸入		 // output 輸出
+CEtoChinese(1977)	// "民國66年"
+CEtoChinese(2022)   // "民國111年"
+CEtoChinese(1666)	// "尚未建國"
+
+// 題目三：年薪計算機
+// 以下是梅添良軟體公司的計薪方式
+
+// 每個月固定支薪，不幫員工保勞健保
+// 三節沒禮金，也沒任何獎金
+// 只有月薪、年終
+// 年終計算
+// 未滿一年，不會有年終
+// 待超過一年的員工，年終會有 1 個月
+// 待超過五年的員工，年終會有 1.3 個月
+function annualSalary(salary,seniority){
+	if(seniority<1){
+		const convertToMonths = Math.floor(seniority*12);
+		return `${salary * 12}`
+	}else if(1<seniority && seniority<5){
+		return `${salary * 13}`
+	}else{
+		return `${salary * 13.3}`
+	}
+}
+// input 輸入				 // output 輸出
+// annualSalary(月薪,年資)
+annualSalary(10000,0.8)		// "120000"
+annualSalary(12000,1.5)		// "156000"
+annualSalary(20000,10)		// "266000"
+
+// 魔王題，請不要輕易接觸，會花上 8hr 時間
+// 梅添良薪水數字大小寫轉換
+// 老闆開發票時，很不擅長數字小寫轉大寫，請幫助他這個金魚腦
+function changeCapital(amount){
+
+	 // 轉換輸入為數字
+	 if (typeof amount === 'string') {
+		amount = parseFloat(amount);
+	}
+
+	// 檢查輸入是否為合法數字
+	if (typeof amount !== 'number' || isNaN(amount)) {
+		return "格式錯誤";
+	}
+
+	if (amount < 0 || amount >= 1e12) {
+    return "格式錯誤";
+  	}
+
+	  const numToStr = {
+    0: '零',
+    1: '壹',
+    2: '貳',
+    3: '參',
+    4: '肆',
+    5: '伍',
+    6: '陸',
+    7: '柒',
+    8: '捌',
+    9: '玖',
+  };
+
+  const unitToStr = ['', '拾', '佰', '仟', '萬', '億'];
+
+  // 轉換整數部分
+  let integerStr = ''; // 存放轉換後的整數部分
+  let integerPart = Math.floor(Math.abs(amount)); // 取整數部分
+  let unitIndex = 0; // 計算當前處理到的位數
+
+  while (integerPart > 0) {
+    const digit = integerPart % 10; // 取出個位數
+	const digitStr = numToStr[digit]; // 將個位數轉換成對應的漢字
+
+    if (digitStr !== '零') { // 如果個位數不是零
+      integerStr = digitStr + unitToStr[unitIndex] + integerStr; // 將個位數和當前位數對應的單位拼接到 integerStr 的前面
+    } else if (integerStr[0] !== '零') {
+      // 防止出現 "壹拾零萬" 的情況，如果 integerStr 的第一個字符不是零，才拼接零
+      integerStr = digitStr + integerStr;
+    }
+
+    integerPart = Math.floor(integerPart / 10);
+    unitIndex++;
+
+    // 每四位數一組，加上萬或億
+    if (unitIndex === 4) {
+      integerStr = unitToStr[unitIndex] + integerStr;
+      unitIndex = 0;
+    }
+  }
+
+  if (!integerStr) {
+    // 如果整數部分為 0，則輸出 "零元整"
+    integerStr = '零';
+  }
+
+  // 轉換小數部分
+  const decimalPart = Math.round((Math.abs(amount) % 1) * 100);
+  const decimalStr = decimalPart === 0 ? '整' : numToStr[Math.floor(decimalPart / 10)] + (decimalPart % 10 === 0 ? '拾' : numToStr[decimalPart % 10]) + '分';
+
+  // 合併整數和小數部分
+  const signStr = amount < 0 ? '負' : '';
+  return signStr + integerStr + '元' + decimalStr;
+
+}
+
+// input 輸入				// output 輸出
+changeCapital(35000)	   // "參萬伍仟元整"
+changeCapital(9876543210)  // "玖拾捌億柒仟陸佰伍拾肆萬參仟貳佰壹拾元整"
+changeCapital(-33)         // "格式錯誤"
+changeCapital("安安")      // "格式錯誤"
+changeCapital("033")      // "參拾參元整"
+
+
+
+
+
+
+
 </script>
