--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1" >
 	<title>切版任務作業一 - AI 工具王 - 產品優勢卡片設計</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
@@ -12,8 +13,8 @@
 
 <body>
 	<div class="container mx-auto">
-		<div class="row row-cols-1 row-cols-md-3 m-0">
-			<div class="col">
+		<div class="row row-cols-md-3 row-cols-1 m-0">
+			<div class="col-sm-12">
 				<div class="card">
 					<img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/9d0ceff5ed470b504331b8d897ea8518b8f163cd/2023web-camp/tool1.png"
 						class="card-img-top" alt="Chatbot Builder">
@@ -35,7 +36,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="col">
+			<div class="col-sm-12">
 				<div class="card">
 					<img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/9d0ceff5ed470b504331b8d897ea8518b8f163cd/2023web-camp/tool2.png"
 						class="card-img-top" alt="Image Recognition Platform">
